Creating the Application Form Interface, Repository, Controller, and Views

--- a/SIS_UMS/SIS_UMS/.env
+++ b/SIS_UMS/SIS_UMS/.env
@@ -1,1 +1,1 @@
-﻿DB_CONNECTION_STRING=Server=localhost;Database=ums;Uid=root;Password=rfayum159;Port=3306;CHARSET=utf8;
+﻿DB_CONNECTION_STRING=Server=localhost;Database=ums;Uid=root;Password=sss;Port=3306;CHARSET=utf8;
