fixed git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-/SIS_UMS/SIS_UMS/appsettings.Development.json
-/SIS_UMS/SIS_UMS/appsettings.json
+SIS_UMS/SIS_UMS/appsettings.Development.json
+SIS_UMS/SIS_UMS/appsettings.json
+SIS_UMS/.vs
+.gitignore
