--- a/SIS_UMS/SIS_UMS/SIS_UMS.csproj
+++ b/SIS_UMS/SIS_UMS/SIS_UMS.csproj
@@ -1,19 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="DotNetEnv" Version="2.5.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
+    <PackageReference Include="DotNetEnv" Version="2.5.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10"/>
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="wwwroot\dist\" />
+    <Folder Include="wwwroot\dist\"/>
   </ItemGroup>
-
 </Project>
