--- a/SIS_UMS/SIS_UMS/SIS_UMS.csproj
+++ b/SIS_UMS/SIS_UMS/SIS_UMS.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10"/>
+  </ItemGroup>
 </Project>
